Topic 10166 - Try to use "font: -moz-info" instead of "font-size: 80%" for buttons to avoid unreadable text in CJK languages

--- a/chrome/skin/filters.css
+++ b/chrome/skin/filters.css
@@ -87,7 +87,7 @@
 
 .actionButton
 {
-  font-size: 80%;
+  font: -moz-info;
 }
 
 splitter
